<resources>
    <string name="app_name">InnDemand</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- .......Facebook App ID....... -->

    <string name="facebook_app_id">1616387568688991</string>

    <!-- .......Google GCM Sender ID ....... -->

    <string name="fcm_defaultSenderId">609144095308</string>

    <!-- .......Google Integration String calls....... -->

    <string name="logout">Logout</string>
    <string name="loginText">Please login with your Google Account</string>

    <!-- ......Hardcoded string values are under...... -->

    <string name="login_call">LOGIN</string>
    <string name="get_direction">GET DIRECTION</string>
    <string name="login_terms_lines">By signing-up you agree to our</string>
    <string name="terms_conditions">terms of service</string>
    <string name="termsconditions">Terms &amp; conditions</string>
    <string name="and">&amp;</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="notification">Notification</string>

    <!-- .............Room Services..................... -->

    <string name="room_services">Room Service</string>
    <string name="bell_boy">Bell-boy</string>
    <string name="room_cleaning">Room cleaning</string>
    <string name="laundry">Laundry</string>
    <string name="cab_call">Cab</string>
    <string name="restaurant">Restaurant</string>
    <string name="wakeup_call">Wake me up</string>
    <string name="bath_essentials">Bathroom Essentials</string>
    <string name="bed_tea_call">Bed Tea/Coffee</string>
    <string name="beverages">Beverages</string>
    <string name="itemscount">Items:</string>
    <string name="totalcount">Total:</string>
    <string name="pick_time">PICK A TIME</string>
    <string name="pick_date">Pick Up Date</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="change_time">CHANGE TIME</string>
    <string name="check_out">CHECKOUT</string>
    <string name="cancel_wakeup_call">CANCEL WAKE UP CALL</string>
    <string name="cancel_cab">CANCEL CAB</string>
    <string name="anything_to_say">Do you have anything to say?</string>
    <string name="tap_to_start">Tap here to start typing</string>
    <string name="when_to_clean">When do you want us to clean your room?</string>
    <string name="when_to_deliver">When do you want us to deliver?</string>
    <string name="when_to_wake">When do you want us to wake you up?</string>
    <string name="when_to_pick">When do you want us to pick you?</string>
    <string name="pick_clothes">When do you want us to pick up clothes?</string>
    <string name="no_of_water_bottles">Select No. of Water Bottles</string>
    <string name="no_of_soda_bottles">Select No. of Soda Bottles</string>
    <string name="no_of_ice_bottles">Select Noll. of Ice Buckets</string>
    <string name="no_of_glasses">Select No. of Glasses</string>
    <string name="bed_tea_tea">Tea</string>
    <string name="bed_tea_coffee">Coffee</string>
    <string name="note_bed_tea">NOTE: We cost Rs 25 per Tea/Coffee. It will take us 20 mins to
        prepare your drink
    </string>
    <string name="note_beverage">NOTE: We will reach the service to you in 15 minutes</string>
    <string name="note_clothes">NOTE: We charge Rs 15 per cloth &amp; 7 hours to deliver it back
    </string>
    <string name="note_bath_essentials">NOTE: It will take us 10 minutes to reach you the towel(S)
    </string>
    <string name="note_cab">NOTE: Providing Cab services is based on the availability.
        We will call you to confirm.
    </string>
    <string name="write_comment_here">Write your comment here</string>
    <string name="write_comment">Write Comment</string>
    <string name="comment_section">Comment Section</string>
    <string name="submit">SUBMIT</string>
    <string name="my_cart">My Cart</string>
    <string name="mycart">NOTE: Taxes Included</string>
    <string name="proceed">PROCEED</string>
    <string name="apply_coupon">Apply Discount Code</string>
    <string name="food_delivery_time">Food Delivery Time</string>
    <string name="appetizer_fragment_headline">Our Restaurant Serves both Vegetarian &amp;
        Non-Vegeterian
    </string>
    <string name="restaurant_timing">Restaurant Timings - 7AM to 11PM</string>
    <string name="note_restaurant">NOTE: It will take a minimum of 60 mins to prepare the food
    </string>
    <string name="towel">Towel</string>
    <string name="soap">Soap</string>
    <string name="maintainance">Maintainance</string>
    <string name="waterbottles">Water Bottles</string>
    <string name="sodabottles">Soda Bottles</string>
    <string name="icebuckets">Ice Buckets</string>
    <string name="glasses">Glasses</string>
    <string name="food_type">FOOD TYPE:</string>
    <string name="restaurants">RESTAURANT</string>
    <string name="bar">BAR</string>
    <string name="spa">SPA</string>
    <string name="zero">0</string>
    <string name="call_hotel">CALL</string>
    <string name="room_service">ROOM SERVICE</string>
    <string name="mis_info">MISCELLANEOUS INFO</string>
    <string name="hotel_restau_timing">Restaurant Timing(s)</string>
    <string name="swim_timing">Swimming Pool Timing(s)</string>
    <string name="about_hotel">ABOUT HOTEL</string>
    <string name="add_number">NOTE: Please add your Mobile number to serve you better.</string>
    <string name="enter_promocode">ENTER PROMO CODE</string>
    <string name="please_scan">Please scan the code below to get Hotel Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="thankyou">Thank You \n for shopping with us.</string>
    <string name="pleasantstay">Have a Pleasant Stay.</string>
    <string name="verifycredentials">Verifying credentials...</string>
    <string name="addcart">Add to cart</string>
    <string name="viewcart">View Cart</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="noti_hotel">Notification(Hotel)</string>
    <string name="noti_inndemand">Notification(InnDemand)</string>
    <string name="no">No</string>
    <string name="qr_entry">You have to scan QR Code \n\n Click Ok to Scan QR Code</string>
    <string name="apply">Apply</string>
    <string name="coupon">Coupon</string>
    <string name="now">Now</string>
    <string name="choose_location">Choose Location</string>
    <string name="language_selected">Language:</string>
    <string name="roomservicesnotavailable">NOTE: Services are not available</string>
    <string name="successful_logout">Successfully logged-out</string>
    <string name="sign_out_hotel">You want to Sign out?</string>

    <!-- ............Restaurant Area................-->

    <string name="restaurant_foodadded_tocart">Your Food is added to cart</string>
    <string name="restaurant_servenotavailable">NOTE: Restaurant Services are not available</string>
    <string name="restaurant_serveavailable">NOTE: It will take a minimum of 60 mins to prepare the
        food
    </string>

    <!-- ............Room Services Class........... -->

    <string name="servebeverages_etc">BEVERAGES ETC</string>
    <string name="serveroomclean">ROOM CLEANING</string>
    <string name="servecab">CAB</string>
    <string name="servelaundry">LAUNDRY</string>
    <string name="servetea_coffee">BED TEA/COFFEE</string>
    <string name="servewake_up">WAKE ME UP</string>
    <string name="servebell_boy">BELL-BOY</string>
    <string name="servebath_essentials">BATHROOM ESSENTIALS</string>

    <!-- ......Navigation Menu.................. -->

    <string name="menuorder_history">Order History</string>
    <string name="menushare_inndemand">Share InnDemand</string>
    <string name="menusetting">Settings</string>
    <string name="menufeedback">Feedback</string>
    <string name="menuhelp">Help</string>
    <string name="menusign_out">Sign-out</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="confirm_demand">CONFIRM MY DEMAND</string>
    <string name="confirm">CONFIRM</string>
    <string name="ok_click">OK</string>
    <string name="disconnect">Disconnect</string>
    <string name="delete_account">Its seems like you want to delete your account.</string>
    <string name="delete">Delete</string>

    <!-- .....My cart & Promo pop-up.....-->

    <string name="carttotal_price">Total Price</string>
    <string name="carttotal_items">Total Items</string>
    <string name="promoenter_code">ENTER CODE</string>
    <string name="promocancel">Cancel</string>
    <string name="promoapply">Apply</string>
    <string name="promoplease_enterpromo">Please enter Coupon code</string>
    <string name="cartselectpayment_option">Select payment option</string>
    <string name="cartselectpayment_pay">Pay</string>

    <!-- .............Pop-ups........... -->

    <string name="restart_app">To Change language, You need to restart your App or Click restart
    </string>
    <string name="restart">Restart</string>

    <string name="country_prompt">Choose a language</string>
    <string-array name="country_languages">
        <item>Choose a language</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Arabic</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>Javanese</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
