<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/wake_up_click"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/backPress_laundry"
            android:onClick="backPress"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_cancel"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laundry"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@android:color/white"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@mipmap/laundry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_clothes"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_clothes"
                android:textSize="@dimen/forteen_sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NOW"
                    android:textSize="@dimen/sixteen_sp"
                    android:onClick="nowPick"
                    android:id="@+id/now_laundry"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/confirm_demand_click" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_time"
                    android:textSize="@dimen/sixteen_sp"
                    android:padding="5dp"
                    android:id="@+id/pickTime_laundry"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/confirm_demand_click" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anything_to_say"
                android:textSize="@dimen/forteen_sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:maxLines="3"
                android:id="@+id/say_something_laundry"
                android:hint="@string/tap_to_start"
                android:background="@null"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/confirm_demand_click"
        android:id="@+id/confirm_demand_click_laundry"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_demand"
            android:textSize="@dimen/forteen_sp"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>