<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_promocode"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/forteen_sp"/>
    
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/promoenter_code" />

        </android.support.design.widget.TextInputLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/promocancel"
                android:id="@+id/cart_promoCancel"
                android:layout_marginRight="100dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/promoapply"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/cart_promoApply"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@android:color/white"
                android:background="@color/confirm_demand_click"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    </RelativeLayout>