<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|snap"
        />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_to_clean"
                android:textSize="@dimen/forteen_sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOW"
                android:textSize="@dimen/sixteen_sp"
                android:padding="5dp"
                android:id="@+id/now_roomClean"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/confirm_demand_click" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_time"
                    android:textSize="@dimen/sixteen_sp"
                    android:padding="5dp"
                    android:id="@+id/pickTime_roomClean"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/confirm_demand_click" />

                </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anything_to_say"
                android:textSize="@dimen/forteen_sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:maxLines="3"
                android:maxLength="100"
                android:layout_marginBottom="50dp"
                android:id="@+id/say_something_roomClean"
                android:hint="@string/tap_to_start"
                android:background="@null"/>

        </LinearLayout>

    </LinearLayout>

        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/confirm_demand_click"
        android:id="@+id/confirm_demand_click_roomClean"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_demand"
            android:textSize="@dimen/forteen_sp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>